--- a/Postcore.Web/Views/Accounts/Confirm.cshtml
+++ b/Postcore.Web/Views/Accounts/Confirm.cshtml
@@ -5,6 +5,8 @@
 
 <div class="row">
     <div class="col-md-4">
+        <h3 class="mt-5">Confirm</h3>
+        <h6>Please check your email for your verification code.</h6>
         <form method="post" asp-controller="Accounts" asp-action="Confirm">
             <div asp-validation-summary="All" class="text-danger" />
 
@@ -20,7 +22,7 @@
                 <span asp-validation-for="Code" class="text-danger" />
             </div>
 
-            <button type="submit">Confirm</button>
+            <button type="submit" class="btn btn-primary">Confirm</button>
         </form>
     </div>
 </div>
