--- a/Postcore.Web/Views/Accounts/SignUp.cshtml
+++ b/Postcore.Web/Views/Accounts/SignUp.cshtml
@@ -1,37 +1,39 @@
 ﻿@{
-    ViewData["Title"] = "Sign Up Page";
+    ViewData["Title"] = "Sign up";
 }
 
 @model Postcore.Web.Core.WebModels.Accounts.SignUpModel;
 
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <h4>Create a new account</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger">
+    <div class="row">
+        <div class="col-md-5 col-lg-5 col-sm-4">
+            <h3 class="mt-5">Sign up</h3>
+            <form method="post" asp-controller="Accounts" asp-action="Signup">
 
-            </div>
+                <div asp-validation-summary="All" class="text-danger" />
 
-            <div class="form-group">
-                <label asp-for="Email" />
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger" />
-            </div>
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
 
-            <div>
-                <label asp-for="Password" />
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger" />
-            </div>
+                <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
 
-            <div>
-                <label asp-for="ConfirmPassword" />
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger" />
-            </div>
+                <div class="form-group">
+                    <label asp-for="ConfirmPassword"></label>
+                    <input asp-for="ConfirmPassword" class="form-control" />
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
 
-            <button type="submit" class="btn btn-default">Sign Up</button>
-        </form>
+                <button type="submit" class="btn btn-primary">Sign up</button>
+
+                <p class="mt-4">
+                    <a asp-action="Login" asp-controller="Accounts">Sign in</a>
+                </p>
+            </form>
+        </div>
     </div>
-</div>
