--- a/Postcore.Web/Views/Accounts/Confirm.cshtml
+++ b/Postcore.Web/Views/Accounts/Confirm.cshtml
@@ -1,6 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@{
+    ViewData["Title"] = "Confirm";
+}
+
 @model Postcore.Web.Core.WebModels.Accounts.ConfirmModel
 
 <div class="row">
@@ -8,18 +9,19 @@
         <h3 class="mt-5">Confirm</h3>
         <h6>Please check your email for your verification code.</h6>
         <form method="post" asp-controller="Accounts" asp-action="Confirm">
-            <div asp-validation-summary="All" class="text-danger" />
+
+            @Html.ValidationMessage("ConfirmError", new { @style = "color: #DF691A;" })
 
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Code"> </label>
                 <input asp-for="Code" class="form-control" />
-                <span asp-validation-for="Code" class="text-danger" />
+                <span asp-validation-for="Code" class="text-danger"></span>
             </div>
 
             <button type="submit" class="btn btn-primary">Confirm</button>
