--- a/Postcore.Web/Views/Accounts/SignUp.cshtml
+++ b/Postcore.Web/Views/Accounts/SignUp.cshtml
@@ -9,7 +9,7 @@
             <h3 class="mt-5">Sign up</h3>
             <form method="post" asp-controller="Accounts" asp-action="Signup">
 
-                <div asp-validation-summary="All" class="text-danger" />
+                @Html.ValidationMessage("SignUpError", new { @style = "color: #DF691A;" })
 
                 <div class="form-group">
                     <label asp-for="Email"></label>
