--- a/Postcore.Web/Views/Home/Index.cshtml
+++ b/Postcore.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-3">Welcome!</h1>
     <p class="lead">This site is currently under construction.  It is driven by a distributed system built using .NET Core microservices and utilizes various AWS cloud services.</p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p>Thanks for visiting.  We hope to unveil the magic soon!</p>
 
     <p class="mt-4">
         <a asp-action="Logout" asp-controller="Accounts">Sign out</a>
